Fix collapsing full screen bug

--- a/src/styles/modules/current-todos.css
+++ b/src/styles/modules/current-todos.css
@@ -12,6 +12,7 @@
   }
   &.fullscreen {
     width: auto;
+    left: 0;
     padding: 0 200px;
   }
   .expand-icon {
